# CSCI513Project

./: CMakeLists.txt  CSCI 513 Project Gazebo Sim  README.md  bridge.yaml  package.xml  path_finding_algo.py  path_planning_algo.py
act/: CMakeLists.txt
act/launch/: gazebo_launch.py
act/models/: mouseRobot.stl
act/models/bed/: model.sdf
act/models/empty_room/: empty_room.stl
act/models/generic_robot/: generic_robot.sdf  model.config
act/models/mouse_robot/: model.sdf  mouse_robot.stl
act/models/plant/: model.config  model.sdf
act/models/room/: model.config  model.sdf
act/models/sofa/: model.sdf  sofa.stl
act/models/table/: model.sdf
act/worlds/: living_room.sdf
install/: local_setup.sh  setup.sh
launch/: gazebo_launch.py
log/: latest_build
models/: plant.stl
models/bed/: bed.stl  model.config  model.sdf
models/generic_robot/: generic_robot.sdf
models/mouse_robot/: model.config  model.sdf
models/room/: model.config  model.sdf  room.stl
models/sofa/: model.config
models/table/: model.config  model.sdf  table.stl
worlds/: living_room.sdf
